--- a/tickets/css/order_try.css
+++ b/tickets/css/order_try.css
@@ -359,8 +359,7 @@ form>.container>.button{
     border-radius: 0px;
     background-color: #03dac6;
     margin-bottom: 10px;
-    padding: bottom 10px;
-    padding: 100px 0;
+    padding: 10px;
     /* background-image: <link rel=""herf="C:\Users\zaqzaq134\Desktop\第八講 Bootstrap Landing Page 排版\img\首頁.jpg"; */
     background-image: url('/tickets/img/ocean.jpg');
     background-size: cover;
@@ -370,6 +369,11 @@ form>.container>.button{
     background-position: center center;
     /* filter: brightness(0.9); */
     position: relative;
+}
+
+.header {
+    margin: 0 2%;
+    padding: 5% 0;
 }
 
 #header>.container {
@@ -623,7 +627,7 @@ footer ul {
       border-bottom: 1px solid rgba(255, 255, 255, 0.2);
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
       content: " ";
-      height: 110%;
+      height: 93%;
       margin: -10% -80% 0% -55%;
       position: absolute;
       width: 110%;
@@ -634,7 +638,7 @@ footer ul {
   
     #featuresSection:before {   
         content: " ";
-        height: 120%;
+        height: 105%;
         margin: -20% 0% 0% -55%;
         position: absolute;
         width: 110%;
@@ -743,8 +747,7 @@ footer ul {
         content: " ";
         height: 115%;
         margin: -18% 0% -0% -55%;
-        position: absolute;
-        width: 110%;
+        position: relative;
     } 
     .font-rwd h2 {
        
@@ -766,7 +769,9 @@ footer ul {
 /*=============================================
 =                   form                   =
 =============================================*/
-
+#buyers_list{
+    padding: 2rem;
+}
 
 a {
   text-decoration: none;
@@ -783,7 +788,7 @@ a:hover {
   max-width: 1000px;
   margin: 50px auto;
   border-radius: 4px;
-  box-shadow: 0 4px 10px 4px rgba(19, 35, 47, .3);
+  /* box-shadow: 0 4px 10px 4px rgba(19, 35, 47, .3); */
 }
 
 .tab-group {
@@ -1191,7 +1196,7 @@ body {
 }
 /*headings*/
 .fs-title {
-	font-size: 15px;
+	font-size: 2rem;
 	text-transform: uppercase;
 	color: #2C3E50;
 	margin-bottom: 10px;
@@ -1213,18 +1218,18 @@ body {
 	list-style-type: none;
 	color: white;
 	text-transform: uppercase;
-	font-size: 9px;
-	width: 33.33%;
+	font-size: 1.5rem;
+	width: 30%;
 	float: left;
 	position: relative;
 }
 #progressbar li:before {
 	content: counter(step);
 	counter-increment: step;
-	width: 20px;
-	line-height: 20px;
+	width: 2rem;
+	line-height: 3rem;
 	display: block;
-	font-size: 10px;
+	font-size: 2rem;
 	color: #333;
 	background: white;
 	border-radius: 3px;
