--- a/tickets/css/order_try.css
+++ b/tickets/css/order_try.css
@@ -125,7 +125,6 @@ button:focus {
   }
   
   .nav-container {
-
     display: flex;
     flex-direction: row;
     position: absolute;
@@ -199,12 +198,21 @@ button:focus {
   }
   
   /* 在屏幕寬度小於 360 像素時應用的樣式 */
-  @media screen and (max-width: 359px) {
+ 
   h1.loader span {
-    font-size: 8vw; /* 在小螢幕上的字體大小 */
+    font-size: 2.5vw; /* 在小螢幕上的字體大小 */
     letter-spacing: 0.2vw; /* 在小螢幕上的字母間距 */
   }
-  }
+  
+
+   /* 在屏幕寬度小於 360 像素時應用的樣式 */
+   @media screen and (max-width: 359px) {
+    h1.loader span {
+      font-size: 8vw; /* 在小螢幕上的字體大小 */
+      letter-spacing: 0.2vw; /* 在小螢幕上的字母間距 */
+    }
+    }
+
 
   .background {
     position: absolute;
@@ -770,7 +778,7 @@ footer ul {
 =                   form                   =
 =============================================*/
 #buyers_list{
-    padding: 2rem;
+    padding: 0 2rem;
 }
 
 a {
@@ -1209,6 +1217,10 @@ body {
 }
 /*progressbar*/
 #progressbar {
+    padding: 2rem;
+    display: flex;
+    justify-content: space-between; /* 將內容均勻地分佈在容器中 */
+    align-items: center; /* 將內容垂直居中對齊 */
 	margin-bottom: 30px;
 	overflow: hidden;
 	/*CSS counters to number the steps*/
@@ -1219,10 +1231,11 @@ body {
 	color: white;
 	text-transform: uppercase;
 	font-size: 1.5rem;
-	width: 30%;
-	float: left;
-	position: relative;
+	/* width: 30%; */
+	/* float: left;
+	position: relative; */
 }
+
 #progressbar li:before {
 	content: counter(step);
 	counter-increment: step;
@@ -1241,7 +1254,7 @@ body {
 	width: 100%;
 	height: 2px;
 	background: white;
-	position: absolute;
+	position: relative;
 	left: -50%;
 	top: 9px;
 	z-index: -1; /*put it behind the numbers*/
@@ -1256,9 +1269,22 @@ body {
 	background: #27AE60;
 	color: white;
 }
+#progressbar .action-button {
+    background-color: #20bb94; /* 請根據您的設計更改背景顏色 */
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
 
+#progressbar .previous {
+    float: left; /* 將 Previous 按鈕置於左側 */
+}
 
-
+#progressbar .next {
+    float: right; /* 將 Next 按鈕置於右側 */
+}
 /*=============================================
 =                   contact(new)                   =
 =============================================*/
@@ -1602,8 +1628,8 @@ form#contact {
     left:0px;
     height:100%;
     padding:15px!important;
-    width:30px;
-    font-size:20px!important;
+    width:2rem;
+    font-size:6rem!important;
     color:#20bb94!important;
     background:rgb(255, 255, 255)!important;
     display:inline-block!important;
@@ -1614,11 +1640,18 @@ form#contact {
     right:0px;
     height:100%;
     padding:15px!important;
-    width:30px;
-    font-size:20px!important;
+    width:2rem;
+    font-size:4vw!important;
     color:#20bb94!important;
     background:rgb(255, 255, 255)!important;
     display:inline-block!important;
+  }
+  .owl-nav span:hover {
+    color: #f70303;
+    font-weight: 500;
+    font-size: 6svw;
+    margin-left: 2px;
+    
   }
   .scroll-tabs{
     margin: 1rem;
@@ -1714,7 +1747,7 @@ form#contact {
   }
   
   .nav-justified .nav-item {
-    font-size: 16px;x
+    font-size: 16px;
     flex-basis: 0;
     flex-grow: 1;
     text-align: center;
