第二頁:旅客資料輸入

--- a/tickets/css/bootstrap.css
+++ b/tickets/css/bootstrap.css
@@ -7171,7 +7171,7 @@ button.bg-secondary:focus {
 }
 
 .bg-pink {
-  background-color: #e83e8c !important;
+  background-color: #db7d7d !important;
 }
 
 .bg-blue {
@@ -10670,7 +10670,7 @@ button.bg-dark:focus {
 }
 
 .text-pink {
-  color: #e83e8c !important;
+  color: #db7d7d !important;
 }
 
 .text-blue {
